@@ -1,3 +1,9 @@
+2000-11-23  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* scheduler/msgerror.c:
+	    Don't try to be clever with cfp->mid field reuse at
+	    the slurp()ed instance -- use incoming 'cfpi->mid'.
+
 2000-11-21  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* transports/smtp/smtp.c:
@@ -700,7 +706,7 @@
 	* libident/identuser.c:
 	    A buglet in read loop.  The 'break' affects only
 	    the innermost loop construct, and it needed to go
-	    out the outer too..  Nuisance think, I would say.
+	    out the outer too..  Nuisance thing, I would say.
 	    (And usage of indent is questionable anyway..)
 
 	* smtpserver/smtpserver.h, smtpserver/smtpcmds.c,
